src/test/compile-fail/if-branch-types.rs
// error-pattern:mismatched types

fn main() { let x = if true { 10 } else { 10u }; }